fixing the skills alignment

--- a/cv/src/app/components/myeducation/education.component.scss
+++ b/cv/src/app/components/myeducation/education.component.scss
@@ -1,5 +1,9 @@
 
 /* Resume */
+.line-title{
+  line-height: 22px;
+}
+
 .timeline {
     position: relative;
   }
