--- a/cv/src/app/components/skills/skills.component.scss
+++ b/cv/src/app/components/skills/skills.component.scss
@@ -1,12 +1,58 @@
+.section-skills{
+    display:flex;
+    justify-content:center;
+}
 .skills{
-    display: inline-block;
-    margin: 10px 4px 10px 12px;
+    //display: inline-block;
+    position:relative;
+    display:flex;
+    justify-content:center;
+    margin: 27px 4px 41px 20px;
+    align-items:center;
+
 }
 
 /* Services Item */
+
+.section-padding {
+    padding: 60px 0;
+}
+
+.section-title-header p {
+    //text: center;
+    font-weight: 400;
+    line-height: 26px;
+    padding-bottom: 36px;
+  }
+  
+  .section-title {
+    color: #252525;
+    font-size: 30px;
+    text-align: center;
+    letter-spacing: 1px;
+    line-height: 1;
+    margin-bottom: 48px;
+    padding: 0 10px;
+    position: relative;
+  }
 .services {
     background: #F0F0F0;
     padding: 10px;
+    display: block;
+}
+
+.section-title{
+    display:flex;
+    justify-content:center;
+
+    color: #252525;
+    font-size: 38px;
+    text-align: center;
+    letter-spacing: 1px;
+    line-height: 1;
+    margin-bottom: 48px;
+    padding: 0 10px;
+    position: relative;
 }
   
 .services-item {
@@ -34,7 +80,7 @@
   
   .services-item .services-content h3 {
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
   }
   
   .services-item .services-content h3 a {
@@ -54,3 +100,15 @@
   .services-item:hover {
     box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.2);
   }
+
+
+
+  @media screen and (max-width: 768px) {
+    .skills{
+        margin-left:10px;
+        display:inline;
+        position:relative;
+    }
+    
+  }
+  
